# nocturnal-agent

./: .gitignore  .mcp.json  CHANGELOG.md  CONFIGURATION_REVIEW.md  CONFIGURATION_UNIFICATION_COMPLETE.md  CONTINUOUS_OPERATION_VERIFICATION.md  README.md  SPEC_KIT_INTEGRATION.md  TECHNICAL_FIXES.md  debug_na_system.py  documentation_generator.py  execute_now.py  install.sh  manual_task_executor.py  nocturnal  nocturnal_simple.py  pyproject.toml  pytest.ini  run_nocturnal_task.py  run_tests.py  sample_requirements.json  sample_requirements.md  sample_requirements.yaml  simple_ai_news_executor.py  test_claude_code_integration.py  test_interaction_logging.py  test_new_design.py  test_new_uiux_system.py  validation_report_20250917_232347.md
.nocturnal/analysis/: failure_analysis_failed-test_20250916_212620.json  failure_analysis_low-quality-test_20250916_212619.json
.nocturnal/approval_queue/: queue.json
.nocturnal/queue/: task_queue.json
.serena/: project.yml
.serena/memories/: ai_collaboration_system.md  code_style_and_conventions.md  command_based_collaboration_system.md  development_environment_setup.md  interactive_design_review_system.md  interactive_review_system_implementation.md  project_purpose_and_overview.md  project_structure.md  quality_assurance_integration.md  suggested_commands.md  system_design_patterns.md  (+2 more)
config/: README.md  nocturnal-agent.yaml  nocturnal_config.yaml  nocturnal_config.yaml.example  targets.json
docs/: NEW_UIUX_SYSTEM.md
logs/: nocturnal_agent.jsonl
nocturnal_output/: README_0ee2df64.md  README_93ace267.md  README_b270b875.md  generated_0ee2df64.py  generated_93ace267.py  generated_b270b875.py
nocturnal_tasks/: tasks.json  tasks_backup_20250917_160056.json  tasks_backup_20250917_162001.json  tasks_backup_20250917_231140.json  tasks_backup_20250917_233839.json  tasks_backup_20250918_110220.json
src/: web_scraper.py
templates/: design_template.yaml
tests/: __init__.py  conftest.py
(+116 files in other folders)
